dnl $Id$

AC_PREREQ(2.50)
AC_INIT(Makefile.am)

AC_ARG_PROGRAM

SGE_VERSION_MAJOR=0
SGE_VERSION_MINOR=1
SGE_VERSION=$SGE_VERSION_MAJOR.$SGE_VERSION_MINOR
AC_SUBST(SGE_VERSION)

AC_CONFIG_AUX_DIR(config)
AM_CONFIG_HEADER(config/config.h)
AM_INIT_AUTOMAKE(sge, $SGE_VERSION)

AC_PREFIX_DEFAULT(/opt/sge)

AC_CONFIG_SUBDIRS(3rdparty/lua)

dnl Check for programs.
AC_PROG_CC
AC_PROG_CXX
AC_PROG_INSTALL

AC_PROG_LIBTOOL
AC_SUBST(LIBTOOL_DEPS)

AC_CHECK_PROG(RC, windres, windres)
AM_CONDITIONAL(HAVE_RC, test "$RC" = "windres")

AC_OBJEXT
AC_EXEEXT

if test "$enable_static" = "yes"; then
   CXXFLAGS="$CXXFLAGS -DSTATIC_BUILD"
fi;

AC_ARG_ENABLE(debug,
              AC_HELP_STRING([--enable-debug], [enable debug information]),
              CXXFLAGS="$CXXFLAGS -ggdb -DDEBUG -D_DEBUG",
              CXXFLAGS="$CXXFLAGS -O2 -DNDEBUG")

CORE_LIBS=
case $host in
   *cygwin*|*mingw*)
      CXXFLAGS="$CXXFLAGS -mwindows"
      CORE_LIBS="-lwinmm -lgdi32 -lopengl32 -glu32"
      ;;
esac
AC_SUBST(CORE_LIBS)

dnl Check for libraries
AC_PATH_XTRA
AM_CONDITIONAL(NO_X, test "$no_x" = "yes")

MDL_HAVE_OPENGL
CHECK_ZLIB

AC_CONFIG_FILES([
   doxyfile
   Makefile
   3rdparty/Makefile
   3rdparty/tinyxml/Makefile
   3rdparty/zlib/contrib/minizip/Makefile
   allguids/Makefile
   tech/Makefile
   render/Makefile
   render/gl/Makefile
   engine/Makefile
   game/Makefile
   data/Makefile
])
AC_OUTPUT
