###############################################################################
# $Id$

lib_LTLIBRARIES = liballguids.la

EXTRA_DIST = allguids.dsp

liballguids_la_SOURCES = allguids.cpp

INCLUDES = -I ../tech/include \
           -I ../render/include \
           -I ../engine/include \
           -I ../game
