###############################################################################
# $Id$

lib_LIBRARIES = liballguids.a

EXTRA_DIST = allguids.dsp

liballguids_a_SOURCES = allguids.cpp

INCLUDES = -I$(top_srcdir)/tech/include \
           -I$(top_srcdir)/render/include \
           -I$(top_srcdir)/engine/include \
           -I$(top_srcdir)/game
