###############################################################################
# $Id$

EXTRA_DIST = *.lua *.xml *.tga

gamedatadir = $(prefix)/data

gamedata_DATA = $(top_srcdir)/data/*.lua \
                $(top_srcdir)/data/*.xml \
                $(top_srcdir)/data/*.tga \
                $(top_srcdir)/data/images/*.tga \
                $(top_srcdir)/data/models/*.*
